2007-06-30  Scroll  <scroll@localhost.localdomain>

	* first stage of test window refactoring: moved test frame
	creation to the top-level components (makeTestWin method); fixed
	pull-down menu populating by adding only relevant entries;
	implemented more core components (wxDialog, wxToolBar, wxMenuBar);
	more logic in child/sibling modes

2007-06-19  Scroll  <scroll@localhost.localdomain>

	* implemented SmartContainer; Unique AttributePanel class for all
	attributes (main, window and implicit); added some core
	components; added deleting (simple implementation)

2007-06-17  Roman Rolinsky  <scroll@lem.lan>

	* initial implementation of AttributePanel (former PropPage)

	* Open menu command working
	
	* XMLTree.Flush, _Presenter.create, _Presenter.setData methods

2007-06-07  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* started to implement MVP pattern classes

	* implemented multi-group support for components

2007-05-31  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* first test of plugin degisn
